--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -13,7 +13,7 @@
 	{% endif %}
 	<ul class=entries>
 	{% for entry in entries %}
-		<li><h2>{{ entry.title }}</h2>{{ entry.text|safe }}
+		<li><h2><b>{{ entry.title }}</b> by {{ entry.author }}</h2>{{ entry.text|safe }}
 		{% if session.logged_in %}
 			(<a href="{{ url_for('delete_entry', id=entry.id) }}">Delete</a>)
 		{% endif %}
