--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,9 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<script>
+var currentUser = '{{ session.get('email') }}';
+</script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <script src="https://login.persona.org/include.js"></script>
 <script src="{{ url_for('static', filename='persona.js') }}"></script>
