--- a/templates/show_events.html
+++ b/templates/show_events.html
@@ -4,9 +4,9 @@
 		<form action="{{ url_for('add_event') }}" method=post class=add-event>
 			<dl>
 				<dt>Title:
-				<dd><input type=text size=30 name=title>
+				<dd><input type=text size=30 name=title required>
 				<dt>Date:
-				<dd><input type=text size=10 placeholder="yyyy-mm-dd" name=date>
+				<dd><input type=date size=10 pattern="^\d{4}-\d{2}-\d{2}$" placeholder="yyyy-mm-dd" name=date required>
 				<dt>Description:
 				<dd><textarea name=description rows=5 cols=40></textarea>
 				<dd><input type=submit value=Add>
