--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,6 @@
 <title>Flaskr</title>
 <meta http-equiv="cache-control" content="max-age=0" />
 <meta http-equiv="cache-control" content="no-cache" />
-<meta http-equiv="expires" content="0" />
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
@@ -26,7 +25,7 @@ var currentUser = '{{ session.get('email') }}';
 	{% endif %}
 	</div>
 	{% for message in get_flashed_messages() %}
-		<div class=flash>{{ message }}</div>
+		<div class=flash>{{ message }} (<span onclick="$(this.parentNode).fadeOut(250);">Dismiss</span>)</div>
 	{% endfor %}
 	{% block body %}{% endblock %}
 </div>
