--- a/static/style.css
+++ b/static/style.css
@@ -15,3 +15,4 @@ h3				{ font-size: 0.8em; color: #a0a0a0; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em; margin-bottom: 1em; background: #fafafa; }
 .flash          { background: #cee5F5; padding: 0.5em; border: 1px solid #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
+#ui-datepicker-div	{ background: #fff; border: 1px solid black; inherit: none; }
