--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
 var currentUser = '{{ session.get('email') }}';
 </script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 <script src="https://login.persona.org/include.js"></script>
 <script src="{{ url_for('static', filename='persona.js') }}"></script>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
