--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -11,4 +11,15 @@
 		<li><em>User doesn't exist.</em>
 	{% endfor %}
 	</ul>
+	<ul class=entries>
+	{% for entry in entries %}
+		<li><h2><b>{{ entry.title }}</b> by <a href="{{ url_for('show_user', id=entry.author_id) }}">{{ entry.author }}</a>
+			(<a href="{{ url_for('delete_entry', id=entry.id) }}">Delete</a>)
+		</h2>{{ entry.text }}<h3>{{ entry.timestamp }}</h3>
+		{% if session.logged_in %}
+		{% endif %}
+	{% else %}
+		<li><em>Unbelievable. No entries here so far.</em>
+	{% endfor %}
+	</ul>
 {% endblock %}
