--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,8 +23,11 @@ var currentUser = '{{ session.get('email') }}';
 		<a href="#" onclick="navigator.id.request();">(Use Persona)</a>
 	{% else %}
 		<div>Logged in as <a href="{{ url_for('show_user', id=session.id) }}">{{ session.get('username') }}</a> (<a href="{{ url_for('edit_user') }}">Edit</a>)</div>
-		<a href="{{ url_for('logout') }}">log out</a>
-		<a href="#" onclick="navigator.id.logout();">(Use Persona)</a>
+		{% if session.login_type == 'username' %}
+			<a href="{{ url_for('logout') }}">log out</a>
+		{% else %}
+			<a href="#" onclick="navigator.id.logout();">log out</a>
+		{% endif %}
 	{% endif %}
 	</div>
 	{% for message in get_flashed_messages() %}
