Register user function.

--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -19,7 +19,7 @@
 		{% if session.logged_in %}
 		{% endif %}
 	{% else %}
-		<li><em>Unbelievable. No entries here so far.</em>
+		<li><em>User has no posts.</em>
 	{% endfor %}
 	</ul>
 {% endblock %}
