--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,7 @@ var currentUser = '{{ session.get('email') }}';
 	{% if not session.logged_in %}
 		<a href="{{ url_for('login') }}">log in</a>
 		<a href="#" onclick="navigator.id.request();">(Use Persona)</a>
+		/ <a href="{{ url_for('register_user') }}">register</a>
 	{% else %}
 		<div>Logged in as <a href="{{ url_for('show_user', id=session.id) }}">{{ session.get('username') }}</a> (<a href="{{ url_for('edit_user') }}">Edit</a>)</div>
 		{% if session.login_type == 'username' %}
