--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,8 @@
 body            { font-family: sans-serif; background: #eee; }
 a, h1, h2       { color: #377ba8; }
 h1, h2, h3      { font-family: 'Georgia', serif; margin: 3px; }
-h1              { border-bottom: 2px solid #eee; text-decoration: none; }
+h1              { border-bottom: 2px solid #eee; }
+h1 a            { text-decoration: none; }
 h2              { font-size: 1.2em; }
 h3				{ font-size: 0.8em; color: #a0a0a0; }
 
