--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -16,7 +16,7 @@
 		<li><h2><b>{{ entry.title }}</b> by <a href="{{ url_for('show_user', id=entry.author_id) }}">{{ entry.author }}</a>
 			(<a href="{{ url_for('record_vote', id=entry.id) }}">+</a>)
 			(<a href="{{ url_for('delete_entry', id=entry.id) }}">Delete</a>)
-		</h2>{{ entry.text }}<h3>{{ entry.timestamp }}</h3>
+		</h2>{{ entry.text.upper() }}<h3>{{ entry.timestamp }}</h3>
 		{% if session.logged_in %}
 		{% endif %}
 	{% else %}
