Downvotes work as well.

--- a/templates/show_entry.html
+++ b/templates/show_entry.html
@@ -7,7 +7,7 @@
 	{% else %}
 	<ul class=entries>
 		<li><h2><b>{{ entry.title }}</b> by <a href="{{ url_for('show_user', id=entry.author_id) }}">{{ entry.author }}</a>
-			({{ entry.score }} <a href="{{ url_for('record_vote', id=entry.id) }}">+</a>)
+			({{ entry.score }} (<a href="{{ url_for('record_vote', id=entry.id, vote_type='up') }}">+</a>)
 			(<a href="{{ url_for('delete_entry', id=entry.id) }}">Delete</a>)
 		</h2>{{ sanitize_html(entry.text)|safe }}<h3>{{ entry.timestamp }}</h3>
 		{% if session.logged_in %}
