--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -14,7 +14,7 @@
 	<ul class=entries>
 	{% for entry in entries %}
 		<li><h2><b>{{ entry.title }}</b> by <a href="{{ url_for('show_user', id=entry.author_id) }}">{{ entry.author }}</a>
-			(<a href="{{ url_for('record_vote', id=entry.id) }}">+</a>)
+			(<a href="{{ url_for('record_vote', id=entry.id, vote_type='up') }}">+</a>)
 			(<a href="{{ url_for('delete_entry', id=entry.id) }}">Delete</a>)
 		</h2>{{ sanitize_html(entry.text)|safe }}<h3><a href="{{ url_for('show_entry', id=entry.id) }}">{{ entry.timestamp }}</a></h3>
 		{% if session.logged_in %}
