--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -6,7 +6,7 @@
 		{% endif %}
 	{% endif %}
 	{% for user in users %}
-		<h2>{{ user.username }}</h2>
+		<h2>{{ user.username }} (Reputation: {{ user.reputation }})</h2>
 	{% else %}
 		<li><em>User doesn't exist.</em>
 	{% endfor %}
