Better none found error.

--- a/templates/show_entries.jinja
+++ b/templates/show_entries.jinja
@@ -6,5 +6,5 @@
 		{% if session.logged_in %}
 		{% endif %}
 	{% else %}
-		<li><em>Unbelievable. No entries here so far.</em>
+		<li><em>No entries found.</em>
 	{% endfor %}
